feat: persistent memory
